--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-  <div class="container">
+ <div class="container">
     <h1>Shopping List</h1>
 
     <form id="js-shopping-list-form">
@@ -21,9 +21,9 @@
 
     <ul class="shopping-list">
       <li>
-        <span class="shopping-item">apples</span>
+        <span class="shopping-item js-shopping-item">apples</span>
         <div class="shopping-item-controls">
-          <button class="shopping-item-toggle">
+          <button class="shopping-item-toggle js-shopping-item-toggle">
             <span class="button-label">check</span>
           </button>
           <button class="shopping-item-delete">
@@ -32,9 +32,9 @@
         </div>
       </li>
       <li>
-        <span class="shopping-item">oranges</span>
+        <span class="shopping-item js-shopping-item">oranges</span>
         <div class="shopping-item-controls">
-          <button class="shopping-item-toggle">
+          <button class="shopping-item-toggle js-shopping-item-toggle">
             <span class="button-label">check</span>
           </button>
           <button class="shopping-item-delete">
@@ -43,9 +43,9 @@
         </div>
       </li>
       <li>
-        <span class="shopping-item shopping-item__checked">milk</span>
+        <span class="shopping-item shopping-item__checked js-shopping-item">milk</span>
         <div class="shopping-item-controls">
-          <button class="shopping-item-toggle">
+          <button class="shopping-item-toggle js-shopping-item-toggle">
             <span class="button-label">check</span>
           </button>
           <button class="shopping-item-delete">
@@ -54,9 +54,9 @@
         </div>
       </li>
       <li>
-        <span class="shopping-item">bread</span>
+        <span class="shopping-item js-shopping-item">bread</span>
         <div class="shopping-item-controls">
-          <button class="shopping-item-toggle">
+          <button class="shopping-item-toggle js-shopping-item-toggle">
             <span class="button-label">check</span>
           </button>
           <button class="shopping-item-delete">
@@ -66,6 +66,7 @@
       </li>
     </ul>
   </div>
-
+  <script src="https://code.jquery.com/jquery-3.2.1.js" type="text/javascript"></script>
+  <script src="app.js" type="text/javascript"></script>
 </body>
 </html>
